modified settings in function.php. Webpack is now using different ports, so I can have multiple devservers running. Added a lot of fonts to my site. Styled Header and Footer a bit. Fixed the issue, that header from fictional-university would overlap with my sites header

--- a/wp-content/themes/clubitsolutions-child_theme/assets/fictional-university/css/modules/site-header.scss
+++ b/wp-content/themes/clubitsolutions-child_theme/assets/fictional-university/css/modules/site-header.scss
@@ -1,4 +1,4 @@
-.site-header {
+.fictional-university__header .site-header {
   z-index: 3;
   position: absolute;
   top: 0;
